# bazel-playground

./: .gitignore  BUILD  WORKSPACE  deps.bzl  go.mod
helloworld/greeter_client/: BUILD.bazel  main.go
helloworld/greeter_server/: BUILD.bazel  main.go
helloworld/proto/: BUILD.bazel
